Removed update genre button

--- a/views/genre/genre_detail.ejs
+++ b/views/genre/genre_detail.ejs
@@ -23,4 +23,14 @@
     <% }) %>
   </div>
 
+  <div class="btn-div">
+    <!-- Not sure if I should leave update genre button -->
+    <!-- <a href="<%= genre.url %>/update">
+      <button class="btn">Update Genre</button>
+    </a> -->
+    <a href="<%= genre.url %>/delete">
+      <button class="btn">Delete Genre</button>
+    </a>
+  </div>
+
 </main>
