--- a/views/genre/genre_detail.ejs
+++ b/views/genre/genre_detail.ejs
@@ -5,7 +5,8 @@
   <div class="genre_list">
 
     <% if (genre_games.length == 0) { %>
-      <h2>There are no games in this genre</h2>
+      <h2>There are no games found in this genre :(</h2>
+      <img class="not-found" src="/images/not-found.png" alt="No Games">
     <% } else { %>
 
       <% genre_games.forEach(game => { %>
@@ -32,10 +33,9 @@
   </div>
 
   <div class="btn-div">
-    <!-- Not sure if I should leave update genre button -->
-    <!-- <a href="<%= genre.url %>/update">
+    <a href="<%= genre.url %>/update">
       <button class="btn">Update Genre</button>
-    </a> -->
+    </a>
     <a href="<%= genre.url %>/delete">
       <button class="btn">Delete Genre</button>
     </a>
