--- a/views/genre/genre_list.ejs
+++ b/views/genre/genre_list.ejs
@@ -9,7 +9,7 @@
   <h1 class="list-title">Explore all <%= title %></h1>
 
   <div class="grid">
-    <% if (genre_games.length == 0) { %>
+    <% if (genre_list.length == 0) { %>
       <h2>There are no genres :( <br>
           Please add some</h2>
       <img class="not-found" src="/images/not-found.png" alt="Not found">
