Added some value if it is a request for update form

--- a/views/genre/genre_form.ejs
+++ b/views/genre/genre_form.ejs
@@ -14,7 +14,7 @@
           placeholder="Please enter genre name"
           name="name"
           required="true"
-          value=<%= (locals.genre) ? locals.genre.name : "" %> 
+          value=<%= typeof genre != 'undefined' ? genre.name : "" %> 
         >
 
         <% if (type == 'update') { %>
