--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,20 +17,20 @@
         <div class='register-dev'>
           <a href='/developer/create'>
             <h2>1. Register your Developer page</h2>
-            <img src='images/register.png' alt='Registration' />
+            <img src='/images/register.png' alt='Registration' />
           </a>
         </div>
         <div class='register-genre'>
           <a href='/genre/create'>
             <h2>2. Add genres if it's missing</h2>
-            <img src='images/add-genre.png' alt='Add genre' />
+            <img src='/images/add-genre.png' alt='Add genre' />
           </a>
         </div>
       </div>
       <div class='register-game'>
         <a href='/game/create'>
           <h2>3. Add game to list</h2>
-          <img src='images/add-game.png' alt='Add game' />
+          <img src='/images/add-game.png' alt='Add game' />
         </a>
       </div>
     </div>
@@ -38,15 +38,15 @@
 
   <div class='inventory-links'>
     <div class='link-gamelist'>
-      <img src='images/games-list.jpg' alt='Games list' />
+      <img src='/images/games-list.jpg' alt='Games list' />
       <a href='/games'><span class='button-links'><p></p></span></a>
     </div>
     <div class='link-genrelist'>
-      <img src='images/genres-list.jpg' alt='Genres list' />
+      <img src='/images/genres-list.jpg' alt='Genres list' />
       <a href='/genres'><span class='button-links'><p></p></a>
     </div>
     <div class='link-devlist'>
-      <img src='images/devs-list.png' alt='Developers list' />
+      <img src='/images/devs-list.png' alt='Developers list' />
       <a href='/developers'><span class='button-links'><p></p></a>
     </div>
   </div>
