Finished styling for whole project

--- a/public/stylesheets/_gridList.css
+++ b/public/stylesheets/_gridList.css
@@ -1,12 +1,10 @@
 .grid {
-  /* width: 70%; */
-  /* border: solid; */
-  margin-top: 30px;
-  padding: 0 15% 100px 15%;
+  margin-top: 20px;
+  padding: 0 20% 100px 20%;
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
+  gap: 5px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -23,14 +21,10 @@
 
 .GridDiv {
   /* border: solid; */
-  margin: 20px 20px 0 20px;
+  margin: 10px 10px 0 10px;
   width: fit-content;
-
   box-sizing: border-box;
-  /* font-size: 20px; */
-  /* padding: 0.5rem; */
   transition: 300ms;
-  /* max-width: 250px; */
   height: fit-content;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.15);
@@ -41,8 +35,6 @@
   padding: 15px;
   cursor: pointer;
   position: relative;
-  /* @include flex-center;
-  flex-direction: column; */
 }
 
 .GridDiv:hover {
@@ -54,14 +46,17 @@
 }
 
 .GridDiv img {
-  width: 200px;
+  max-width: 200px;
+  max-height: 150px;
 }
 
 .list-title {
-  font-family: 'Comfortaa', Courier, monospace;
+  font-family: 'Bebas Neue', Courier, monospace;
   text-transform: capitalize;
   color: black;
   padding: 20px 20px 0 20px;
+  font-size: 2.5em;
+  letter-spacing: 2px;
 }
 
 .GridDiv h3 {
@@ -73,16 +68,13 @@
 /* BUTTONS */
 
 .btn-div {
-  /* border: black solid; */
-  /* margin-top: 20px; */
   padding: 25px 0;
 }
 
 .btn {
-  /* color: #FFF; */
   background-color: transparent;
   border: 3px solid;
-  color: #0258d8;
+  color: #034ec0;
   border-radius: 0px;
   display: inline-block;
   text-transform: uppercase;
@@ -91,12 +83,11 @@
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
-  font-family: "Josefin Sans", Helvetica, sans-serif;
+  font-family: "Lucida Grande", Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 600;
   padding: 15px 30px;
-  /* border-color: #02d891;
-  box-shadow: inset 0 0 0 0 #02d891; */
+  margin: 0 25px;
   border-color: #0258d8;
   box-shadow: inset 0 0 0 0 #0258d8;
 }
