--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Niconne&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@500&family=Fredoka+One&display=swap');
 @import "_header.css";
 @import "_footer.css";
 @import "_index.css";
+@import "_forms.css";
+@import "_gridList.css";
+@import "_genre_detail.css";
+@import "_game-developer_detail.css";
 
 /* ROOT */
 *,
@@ -12,6 +15,8 @@
   margin: 0;
   padding: 0;
 }
+
+/* MAIN PARTS */
 
 header,
 footer {
@@ -25,9 +30,28 @@ body {
 
 main {
   background-color: #d4d4d4;
+  min-height: 500px;
 }
 
 a {
   color: white;
   text-decoration: none;
+}
+
+/* Delete form */
+
+.delete-form img {
+  max-height: 150px;
+  max-width: 200px;
+}
+
+.delete-form h3 {
+  font-size: 20px;
+}
+
+/* Genre not found image */
+
+.not-found {
+  height: 300px;
+  border: none;
 }
