--- a/views/developer/developer_detail.ejs
+++ b/views/developer/developer_detail.ejs
@@ -4,15 +4,19 @@
       <h1><%= title %></h1>
       <h2><%= developer.description %></h2>
 
-      <h2>List of games:</h2>
-
-      <ul class="dev-list-game">
-        <% developer_games.forEach(game => { %>
-        <a href="<%=game.url%>">
-          <li><h2><%= game.title%></h2></li>
-        </a>
-        <% }); %>
-      </ul>
+      
+      <% if (developer_games.length == 0) { %>
+        <h3>There are no games found :(</h3>
+      <% } else { %>
+        <h2>List of games:</h2>
+        <ul class="dev-list-game">
+          <% developer_games.forEach(game => { %>
+          <a href="<%=game.url%>">
+            <li><h2><%= game.title%></h2></li>
+          </a>
+          <% }); %>
+        </ul>
+      <% } %>
 
     </div>
     <div class="detailImage">
@@ -22,7 +26,7 @@
       <img src="/images/devs-list.png" alt="Developer image placeholder" />
       <% } %>
 
-      <div class="gameEditButton">
+      <div class="editButton">
         <a href="<%= developer.url %>/update">
           <button class="btn">Update Developer</button>
         </a>
